# gnome-recorder

./: Makefile.am  autogen.sh  configure.ac
grecord/: Makefile.am
grecord/src/: Makefile.am  gnome-recorder.c  gsr-window.c  gsr-window.h
src/: Makefile.am  gnome-recorder.c  gsr-fileutil.c  gsr-fileutil.h  gsr-gstreamer.c  gsr-gstreamer.h  gsr-window.c  gsr-window.h  ui.xml
